--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,14 @@
 name: CI/CD Fake
 on: 
     workflow_dispatch:  
+      inputs:
+        ambiente:
+            type: string
+            default: "desenvolvimento"
+            options:
+              - desenvolvimento
+              - homologacao
+              - producao
 jobs:
     CI:
         runs-on: ubuntu-latest
@@ -12,8 +20,7 @@ jobs:
             - name: Publicando a Release
               run: echo "Publicação da Relase final"
     CD:
-        runs-on: ubuntu-latest
         needs: [CI]
-        steps:
-            - name: Deploy no ambiente
-              run: echo "Executando o deploy no ambiente de desenvolvimento"
+        uses: jceleste1/GitActionsReaprovWorkflows/.github/workflows/cd.yml@main
+        with:
+          ambiente: ${{  inputs.ambiente }}
