gitaction workflows reaproveitamento

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,9 @@ on:
     workflow_dispatch:  
       inputs:
         ambiente:
-            type: string
+            type: choice
             default: "desenvolvimento"
+            description: "Ambiente aonde vai ser feito o deploy "
             options:
               - desenvolvimento
               - homologacao
