--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
               description: "Ambiente aonde vai ser feito o deploy "
        secrets:
            ambiente_secrets:
-              requeried: true
+              requered: true
               description: "Ambiente Secret aonde vai ser feito o deploy "
                     
 jobs:
