--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@ on:
               default: "desenvolvimento"
               description: "Ambiente aonde vai ser feito o deploy "
        secrets:
-           ambiente_secrets:
+           password:
               required: true
               description: "Ambiente Secret aonde vai ser feito o deploy "
                     
@@ -16,4 +16,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
            - name: Deploy no ambiente
-             run: echo "Executando deploy no ambiente ${{ inputs.ambiente }}  secrets  ${{ ambiente_secrets }}    "
+             run: echo "Executando deploy no ambiente ${{ inputs.ambiente }}  password  ${{ secrets.password }}    "
